adding jacoco xml report generation